--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "virtual-valley-frontend",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "prebuild": "npm run lint",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -29,6 +30,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   }
 }
