--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "virtual-valley-frontend",
   "version": "1.0.0",
   "private": true,
-"scripts": {
-  "dev": "next dev --turbo",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
-},
+  "scripts": {
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "file-saver": "^2.0.5",
     "framer-motion": "^12.7.4",
@@ -23,6 +23,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
