--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "virtual-valley-frontend",
   "version": "1.0.0",
   "private": true,
-"scripts": {
-  "dev": "next dev --turbo",
-  "build": "next build",
-  "start": "next start",
-  "export": "next export"
-},
+  "scripts": {
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "export": "next export"
+  },
   "dependencies": {
     "file-saver": "^2.0.5",
     "framer-motion": "^12.7.4",
