--- a/.github/workflows/main_virtualvalley-backend.yml
+++ b/.github/workflows/main_virtualvalley-backend.yml
@@ -78,4 +78,6 @@ jobs:
         with:
           app-name: 'virtualvalley-backend'
           slot-name: 'Production'
+          package: .
+          clean: true
           
