--- a/.github/workflows/main_virtualvalley-backend.yml
+++ b/.github/workflows/main_virtualvalley-backend.yml
@@ -73,11 +73,12 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F41058477AB3443A9B74AD536B0DDF1B }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'virtualvalley-backend'
           slot-name: 'Production'
           package: .
           clean: true
+          deployment-method: zipDeploy
           
